templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-app-service
  namespace: f1-platform
spec:
  type: NodePort
  selector:
    app: mlflow-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 5000
    name: http
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow-database-service
  namespace: f1-platform
spec:
  type: NodePort
  selector:
    app: mlflow-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
    name: http
