templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow-dashboard-ingress
  annotations:
      cert-manager.io/cluster-issuer: "letsencrypt-prod"
      kubernetes.io/ingress.class: "nginx"
  labels:
    app: f1-platform
    component: mlflow
spec:
  tls:
    - hosts:
      - models.f1-platform.zawalich.pl
      secretName: echo-tls
  rules:
  - host: models.f1-platform.zawalich.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlflow-dashboard-service
            port:
              number: 5000
